--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dompurify": "^2.0.10",
     "gatsby": "^2.20.12",
     "gatsby-image": "^2.3.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-netlify-cms": "^4.2.2",
     "gatsby-plugin-offline": "^3.1.2",
@@ -22,7 +23,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.1.0",
