change file structure

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -35,13 +35,13 @@ collections:
         label: "About"
         name: "about"
         fields:
-          - { label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page" }
+          - { label: "Template Key", name: "templateKey", widget: "hidden", default: "about" }
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Body", name: "body", widget: "markdown" }
       - file: "content/category/index.md"
         label: "Category"
         name: "category"
         fields:
-          - { label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page" }
+          - { label: "Template Key", name: "templateKey", widget: "hidden", default: "about" }
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Body", name: "body", widget: "markdown" }
