--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "dompurify": "^2.0.10",
     "gatsby": "^2.20.12",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -23,6 +22,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "sanitize-html": "^1.23.0",
     "styled-components": "^5.1.0",
     "styled-system": "^5.1.5"
   },
