--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,12 +24,7 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": [
-    "prettier",
-    "react",
-    "import",
-    "jsx-a11y"
-  ],
+  "plugins": ["prettier", "react", "import", "jsx-a11y"],
   "rules": {
     "prettier/prettier": "error",
     "react/prop-types": 0,
