--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ public_folder: /img
 
 collections:
   - name: "story"
-    label: "Story"
+    label: "Stories"
     folder: "content/story"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
@@ -18,7 +18,7 @@ collections:
       - { label: "Template Key", name: "templateKey", widget: "hidden", default: "story" }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Description", name: "description", widget: "string" }
+      - { label: "Image", name: "image", widget: "image" }
       - { label: "Body", name: "body", widget: "markdown" }
 
   - name: "pages"
@@ -30,6 +30,8 @@ collections:
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page" }
           - { label: "Title", name: "title", widget: "string" }
+          - { label: "Headline-Left", name: "headline-left", widget: "string" }
+          - { label: "Image", name: "image", widget: "image" }
           - { label: "Body", name: "body", widget: "markdown" }
       - file: "content/about/index.md"
         label: "About"
@@ -37,6 +39,7 @@ collections:
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "about" }
           - { label: "Title", name: "title", widget: "string" }
+          - { label: "Image", name: "image", widget: "image" }
           - { label: "Body", name: "body", widget: "markdown" }
       - file: "content/training/index.md"
         label: "Training"
