fix about image object for cms

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -38,7 +38,7 @@ collections:
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "about" }
           - { label: "Title", name: "title", widget: "string" }
-          - { label: "Image", name: "image", widget: "object", fields: [{label: "Image", name: "image", widget: "image"}, {label: "Alt", name: "alt", widget: "string"}] }
+          - { label: "Main-image", name: "mainImage", widget: "object", fields: [{label: "Image", name: "image", widget: "image"}, {label: "Alt", name: "alt", widget: "string"}] }
           - { label: "Body", name: "body", widget: "markdown" }
       - file: "content/training/index.md"
         label: "Training"
