--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -31,7 +31,7 @@ collections:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page" }
           - { label: "Headline-Left", name: "headlineLeft", widget: "string" }
           - { label: "Image", name: "image", widget: "image" }
-          - { label: "Body", name: "body", widget: "markdown" }
+          - { label: "Footer", name: "footer", widget: "object", fields: [{label: "Column-1", name: "column1", widget: "object", fields: [{ label: "Title", name: "title", widget: "markdown" }, { label: "Body", name: "body", widget: "markdown" }]}, {label: "Column-2", name: "column2", widget: "object", fields: [{ label: "Title", name: "title", widget: "markdown" }, { label: "Body", name: "body", widget: "markdown" }]}, {label: "Column-3", name: "column3", widget: "object", fields: [{ label: "Title", name: "title", widget: "markdown" }, { label: "Body", name: "body", widget: "markdown" }]}] }
       - file: "content/about/index.md"
         label: "About"
         name: "about"
