add list in audio section

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -54,3 +54,4 @@ collections:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "audio" }
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Body", name: "body", widget: "markdown" }
+          - { label: "Audio List", name: "audioList", widget: "list", fields: [{label: "Title", name: "title", widget: "string"}{label: "Image", name: "image", widget: "image"}, {label: "Link", name: "link", widget: "string"}] }
