--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -50,8 +50,9 @@ collections:
       - file: "content/audio/index.md"
         label: "Audio"
         name: "audio"
+        comment: "Up to 6 featured entries possible"
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "audio" }
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Body", name: "body", widget: "markdown" }
-          - { label: "Audio List", name: "audioList", widget: "list", fields: [{label: "Featured Entry", name: "featuredEntry", widget: "boolean", required: false, comment: "Up to 6 featured entries possible"}, {label: "Title", name: "title", widget: "string"}, {label: "Image", name: "image", widget: "image"}, {label: "Link", name: "link", widget: "string"}] }
+          - { label: "Audio List", name: "audioList", widget: "list", fields: [{label: "Small image", name: "smallImage", widget: "object", fields: [{label: "Featured Entry", name: "featuredEntry", widget: "boolean", required: "false"}, {label: "Title", name: "title", widget: "string"}, {label: "Image", name: "image", widget: "image"}, {label: "Link", name: "link", widget: "string"}]}, {label: "Large image", name: "largeImage", widget: "object", fields: [{label: "Featured Entry", name: "featuredEntry", widget: "boolean", required: "false"}, {label: "Title", name: "title", widget: "string"}, {label: "Image", name: "image", widget: "image"}, {label: "Link", name: "link", widget: "string"}]}] }
