--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,7 +30,6 @@ collections:
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page" }
           - { label: "Headline-Left", name: "headlineLeft", widget: "string" }
-          - { label: "Images", name: "images", widget: "list", fields: [{label: "Image", name: "image", widget: "image"}, {label: "Alt", name: "alt", widget: "string"}] }
           - { label: "Footer", name: "footer", widget: "object", fields: [{label: "Column-1", name: "column1", widget: "object", fields: [{ label: "Title", name: "title", widget: "string" }, { label: "Body", name: "body", widget: "markdown" }]}, {label: "Column-2", name: "column2", widget: "object", fields: [{ label: "Title", name: "title", widget: "string" }, { label: "Body", name: "body", widget: "markdown" }]}, {label: "Column-3", name: "column3", widget: "object", fields: [{ label: "Title", name: "title", widget: "string" }, { label: "Body", name: "body", widget: "markdown" }]}] }
       - file: "content/about/index.md"
         label: "About"
@@ -50,9 +49,8 @@ collections:
       - file: "content/audio/index.md"
         label: "Audio"
         name: "audio"
-        comment: "Up to 6 featured entries possible"
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "audio" }
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Body", name: "body", widget: "markdown" }
-          - { label: "Audio List", name: "audioList", widget: "list", fields: [{label: "Small image", name: "smallImage", widget: "object", fields: [{label: "Featured Entry", name: "featuredEntry", widget: "boolean", required: false}, {label: "Title", name: "title", widget: "string"}, {label: "Image", name: "image", widget: "image"}, {label: "Link", name: "link", widget: "string"}]}, {label: "Large image", name: "largeImage", widget: "object", fields: [{label: "Featured Entry", name: "featuredEntry", widget: "boolean", required: false}, {label: "Title", name: "title", widget: "string"}, {label: "Image", name: "image", widget: "image"}, {label: "Link", name: "link", widget: "string"}]}] }
+          - { label: "Audio List", name: "audioList", widget: "list", fields: [{label: "Small image", name: "smallImage", widget: "object", fields: [{label: "Add to homepage (Up to 6 entries possible)", name: "featuredEntry", widget: "boolean", required: false}, {label: "Title", name: "title", widget: "string"}, {label: "Image", name: "image", widget: "image"}, {label: "Link", name: "link", widget: "string"}]}, {label: "Large image", name: "largeImage", widget: "object", fields: [{label: "Add to homepage (Up to 6 entries possible)", name: "featuredEntry", widget: "boolean", required: false}, {label: "Title", name: "title", widget: "string"}, {label: "Image", name: "image", widget: "image"}, {label: "Link", name: "link", widget: "string"}]}] }
