--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-transition-group": "^4.4.1",
     "sanitize-html": "^1.23.0",
     "styled-components": "^5.1.0",
     "styled-system": "^5.1.5"
