--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -41,11 +41,12 @@ collections:
     files:
       - file: "content/index.md"
         label: "Homepage"
+        editor:
+          preview: false
         name: "index"
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page" }
           - { label: "Headline-Left", name: "headlineLeft", widget: "string" }
-          - { label: "Footer", name: "footer", widget: "object", fields: [{label: "Column-1", name: "column1", widget: "object", fields: [{ label: "Title", name: "title", widget: "string" }, { label: "Body", name: "body", widget: "markdown" }]}, {label: "Column-2", name: "column2", widget: "object", fields: [{ label: "Title", name: "title", widget: "string" }, { label: "Body", name: "body", widget: "markdown" }]}, {label: "Column-3", name: "column3", widget: "object", fields: [{ label: "Title", name: "title", widget: "string" }, { label: "Body", name: "body", widget: "markdown" }]}] }
           - { label: "Featured entries", name: "featuredEntries", widget: "list", hint: "Select 6 entries from audio/training/stories", types:
             [
             {
@@ -60,7 +61,7 @@ collections:
                   widget: "relation",
                   collection: "audio1",
                   file: "audio1",
-                  valueField: ["title", "audioImage", "link"],
+                  valueField: "audio1.*",
                   searchFields: ["title"],
                   displayFields: ["title"],
                   multiple: true,
@@ -69,8 +70,11 @@ collections:
                 ]
             }
             ] }
+          - { label: "Footer", name: "footer", widget: "object", fields: [{label: "Column-1", name: "column1", widget: "object", fields: [{ label: "Title", name: "title", widget: "string" }, { label: "Body", name: "body", widget: "markdown" }]}, {label: "Column-2", name: "column2", widget: "object", fields: [{ label: "Title", name: "title", widget: "string" }, { label: "Body", name: "body", widget: "markdown" }]}, {label: "Column-3", name: "column3", widget: "object", fields: [{ label: "Title", name: "title", widget: "string" }, { label: "Body", name: "body", widget: "markdown" }]}] }
       - file: "content/about/index.md"
         label: "About"
+        editor:
+          preview: false
         name: "about"
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "about" }
@@ -79,6 +83,8 @@ collections:
           - { label: "Body", name: "body", widget: "markdown" }
       - file: "content/training/index.md"
         label: "Training"
+        editor:
+          preview: false
         name: "training"
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "training" }
@@ -86,6 +92,8 @@ collections:
           - { label: "Body", name: "body", widget: "markdown" }
       - file: "content/audio/index.md"
         label: "Audio"
+        editor:
+          preview: false
         name: "audio"
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "audio" }
