--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -61,7 +61,7 @@ collections:
                   widget: "relation",
                   collection: "audio1",
                   file: "audio1",
-                  valueField: id,
+                  valueField: "title,
                   searchFields: ["title"],
                   displayFields: ["title"],
                   multiple: true,
