--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -31,18 +31,18 @@ collections:
     fields:
       - { label: "Template Key", name: "templateKey", widget: "hidden", default: "audio1" }
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Audio image", name: "audioImage", widget: "image" }
+      - { label: "Audio image", name: "image", widget: "image" }
       - { label: "Short description", name: "shortDescription", widget: "string" }
       - { label: "Full description", name: "fullDescription", widget: "markdown" }
       - { label: "Link", name: "link", widget: "string" }
 
   - name: "pages"
     label: "Pages"
+    editor:
+      preview: false
     files:
       - file: "content/index.md"
         label: "Homepage"
-        editor:
-          preview: false
         name: "index"
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "index-page" }
@@ -73,8 +73,6 @@ collections:
           - { label: "Footer", name: "footer", widget: "object", fields: [{label: "Column-1", name: "column1", widget: "object", fields: [{ label: "Title", name: "title", widget: "string" }, { label: "Body", name: "body", widget: "markdown" }]}, {label: "Column-2", name: "column2", widget: "object", fields: [{ label: "Title", name: "title", widget: "string" }, { label: "Body", name: "body", widget: "markdown" }]}, {label: "Column-3", name: "column3", widget: "object", fields: [{ label: "Title", name: "title", widget: "string" }, { label: "Body", name: "body", widget: "markdown" }]}] }
       - file: "content/about/index.md"
         label: "About"
-        editor:
-          preview: false
         name: "about"
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "about" }
@@ -83,8 +81,6 @@ collections:
           - { label: "Body", name: "body", widget: "markdown" }
       - file: "content/training/index.md"
         label: "Training"
-        editor:
-          preview: false
         name: "training"
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "training" }
@@ -92,8 +88,6 @@ collections:
           - { label: "Body", name: "body", widget: "markdown" }
       - file: "content/audio/index.md"
         label: "Audio"
-        editor:
-          preview: false
         name: "audio"
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "audio" }
