--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,7 +18,7 @@ collections:
       - { label: "Template Key", name: "templateKey", widget: "hidden", default: "story" }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Story image", name: "storyImage", widget: "image" }
+      - { label: "Story image", name: "image", widget: "image" }
       - { label: "Body", name: "body", widget: "markdown" }
 
   - name: "audio1"
