--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
+    "cypress": "^5.0.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "start-server-and-test": "^1.11.3"
   },
   "keywords": [
     "gatsby"
@@ -51,7 +54,10 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "eslint": "eslint src/**/*.jsx",
-    "eslint:fix": "eslint --ext .jsx --fix ./ --ignore-path .gitignore"
+    "eslint:fix": "eslint --ext .jsx --fix ./ --ignore-path .gitignore",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open",
+    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
   },
   "repository": {
     "type": "git",
