--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -15,3 +15,7 @@ jobs:
 
       - name: Cypress run
         uses: cypress-io/github-action@v2
+        with:
+          build: npm run build
+          start: npm run serve
+          wait-on: http://localhost:9000
