--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
-    "prettier": "^1.19.1",
-    "start-server-and-test": "^1.11.3"
+    "prettier": "^1.19.1"
   },
   "keywords": [
     "gatsby"
@@ -56,8 +55,7 @@
     "eslint": "eslint src/**/*.jsx",
     "eslint:fix": "eslint --ext .jsx --fix ./ --ignore-path .gitignore",
     "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
+    "cy:open": "cypress open"
   },
   "repository": {
     "type": "git",
