--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,9 +6,12 @@ local_backend: true
 media_folder: static/img
 public_folder: /img
 
+publish_mode: editorial_workflow
+
 collections:
   - name: "singleEntries"
     label: "Single Entries (audio/training/story)"
+    files:
     - name: "story"
       label: "Stories"
       folder: "content/story"
