--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -29,7 +29,7 @@ collections:
     editor:
       preview: false
     fields:
-      - { label: "Template Key", name: "templateKey", widget: "hidden", default: "audioPost" }
+      - { label: "Template Key", name: "templateKey", widget: "hidden", default: "audio-post" }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Link", name: "link", widget: "string" }
       - { label: "Audio image", name: "image", widget: "image" }
