--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,7 +17,7 @@ collections:
     fields:
       - { label: "Template Key", name: "templateKey", widget: "hidden", default: "story" }
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Publish Date", name: "date", widget: "datetime", default: "", date_format: "DD.MM.YYYY", time_format: "HH:mm" }
       - { label: "Story image", name: "image", widget: "image" }
       - { label: "Body", name: "body", widget: "markdown" }
 
@@ -31,7 +31,7 @@ collections:
     fields:
       - { label: "Template Key", name: "templateKey", widget: "hidden", default: "audio-post" }
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Publish Date", name: "date", widget: "datetime", default: "", date_format: "DD.MM.YYYY", time_format: "HH:mm" }
       - { label: "Link", name: "link", widget: "string" }
       - { label: "Audio image", name: "image", widget: "image" }
       - { label: "Short description", name: "shortDescription", widget: "string" }
@@ -47,7 +47,7 @@ collections:
     fields:
       - { label: "Template Key", name: "templateKey", widget: "hidden", default: "training-post" }
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Publish Date", name: "date", widget: "datetime", default: "", date_format: "DD.MM.YYYY", time_format: "HH:mm" }
       - { label: "Link", name: "link", widget: "string" }
       - { label: "Training image", name: "image", widget: "image" }
       - { label: "Short description", name: "shortDescription", widget: "string" }
