--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,6 +6,10 @@ local_backend: true
 media_folder: static/img
 public_folder: /img
 
+slug:
+  encoding: "ascii"
+  clean_accents: true
+
 collections:
   - name: "story"
     label: "Stories"
