--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,6 +23,7 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Story image", name: "image", widget: "image" }
+      - { label: "Image credits (optional)", name: "imageCredits", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
 
   - name: "audio-post"
@@ -38,6 +39,7 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Link", name: "link", widget: "string" }
       - { label: "Audio image", name: "image", widget: "image" }
+      - { label: "Image credits (optional)", name: "imageCredits", widget: "string" }
       - { label: "Short description", name: "shortDescription", widget: "string" }
       - { label: "Full description", name: "fullDescription", widget: "markdown" }
 
