--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "vp-portfolio",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "dayjs": "^1.8.36",
     "firebase": "^7.21.0",
