add image credits to about page

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -104,7 +104,7 @@ collections:
         fields:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "about" }
           - { label: "Title", name: "title", widget: "string" }
-          - { label: "Main-image", name: "mainImage", widget: "object", fields: [{label: "Image", name: "image", widget: "image"}, {label: "Alt", name: "alt", widget: "string"}] }
+          - { label: "Main-image", name: "mainImage", widget: "object", fields: [{label: "Image", name: "image", widget: "image"}, { label: "Image credits", name: "imageCredits", widget: "string", required: false }] }
           - { label: "Body", name: "body", widget: "markdown" }
       - file: "content/contact/index.md"
         label: "Contact"
