--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -43,6 +43,16 @@ collections:
       - { label: "Short description", name: "shortDescription", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
 
+  - name: "test"
+    i18n: true
+    label: "test desc"
+    folder: "content/test"
+    fields:
+      - { label: "Template Key", name: "templateKey", widget: "hidden", default: "test" }
+      - { label: "Language", name: "language", widget: "select", options: ["lt", "en"], i18n: true }
+      - { label: "Title", name: "title", widget: "string", i18n: true }
+      - { label: "Body", name: "body", widget: "markdown", i18n: true }
+
   - name: "pages"
     label: "Pages"
     editor:
