--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -53,6 +53,33 @@ collections:
       - { label: "Title", name: "title", widget: "string", i18n: true }
       - { label: "Body", name: "body", widget: "markdown", i18n: true }
 
+  - name: "footer"
+    i18n: true
+    label: "Footer"
+    folder: "content/footer"
+    widget: "object"
+    fields:
+      - { label: "Language", name: "language", widget: "select", options: ["lt", "en"], i18n: true }
+      - { label: "Title", name: "title", widget: "string", default: "footer", i18n: true }
+      - label: "Column-1"
+        name: "column1"
+        widget: "object"
+        fields:
+          - { label: "Title", name: "title", widget: "string", i18n: true }
+          - { label: "Body", name: "body", widget: "markdown", i18n: true }
+      - label: "Column-2"
+        name: "column2"
+        widget: "object"
+        fields:
+          - { label: "Title", name: "title", widget: "string", i18n: true }
+          - { label: "Body", name: "body", widget: "markdown", i18n: true }
+      - label: "Column-3"
+        name: "column3"
+        widget: "object"
+        fields:
+          - { label: "Title", name: "title", widget: "string", i18n: true }
+          - { label: "Body", name: "body", widget: "markdown", i18n: true }
+
   - name: "pages"
     label: "Pages"
     editor:
